<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPlayer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/txtPlayer2"
            android:textAlignment="center"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/casilla_13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:maxLines="1"
                android:paddingHorizontal="0dp"
                android:paddingBottom="24dp"
                android:text="@string/txtInitialScore"
                android:textColor="@color/blue_violet"
                android:textSize="52sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="12"
                android:orientation="vertical">

                <!-- Jugador 2 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/casilla_12"
                        style="@style/BantumiButton"
                        android:clickable="false" />

                    <Button
                        android:id="@+id/casilla_11"
                        style="@style/BantumiButton"
                        android:clickable="false" />

                    <Button
                        android:id="@+id/casilla_10"
                        style="@style/BantumiButton"
                        android:clickable="false" />

                    <Button
                        android:id="@+id/casilla_09"
                        style="@style/BantumiButton"
                        android:clickable="false" />

                    <Button
                        android:id="@+id/casilla_08"
                        style="@style/BantumiButton"
                        android:clickable="false" />

                    <Button
                        android:id="@+id/casilla_07"
                        style="@style/BantumiButton"
                        android:clickable="false" />

                </LinearLayout>

                <!-- Jugador 1 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp">

                    <Button
                        android:id="@+id/casilla_00"
                        style="@style/BantumiButton" />

                    <Button
                        android:id="@+id/casilla_01"
                        style="@style/BantumiButton" />

                    <Button
                        android:id="@+id/casilla_02"
                        style="@style/BantumiButton" />

                    <Button
                        android:id="@+id/casilla_03"
                        style="@style/BantumiButton" />

                    <Button
                        android:id="@+id/casilla_04"
                        style="@style/BantumiButton" />

                    <Button
                        android:id="@+id/casilla_05"
                        style="@style/BantumiButton" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/casilla_06"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:maxLines="1"
                android:paddingHorizontal="0dp"
                android:paddingBottom="24dp"
                android:text="@string/txtInitialScore"
                android:textColor="@color/blue_violet"
                android:textSize="52sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvPlayer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:padding="16dp"
            android:text="@string/txtPlayer1"
            android:textAlignment="center"
            android:textSize="22sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:padding="15dp"
        android:text="@string/txtBtnReset"
        android:textColor="@color/white" />
</RelativeLayout>